WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238678
REGRESSION(
r292197
): 3 TestWebKitAPI.ContentRuleList API tests are constant failures/timeout
https://bugs.webkit.org/show_bug.cgi?id=238678
Summary
REGRESSION(r292197): 3 TestWebKitAPI.ContentRuleList API tests are constant f...
Chris Dumez
Reported
2022-04-01 12:21:53 PDT
3 TestWebKitAPI.ContentRuleList API tests are constant failures/timeout since
r292197
.
Attachments
[fast-cq] Patch
(2.21 KB, patch)
2022-04-01 12:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-04-01 12:22:30 PDT
<
rdar://91173297
>
Chris Dumez
Comment 2
2022-04-01 12:25:47 PDT
Created
attachment 456389
[details]
[fast-cq] Patch
EWS
Comment 3
2022-04-01 12:31:21 PDT
Committed
r292230
(
249132@main
): <
https://commits.webkit.org/249132@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456389
[details]
.
Chris Dumez
Comment 4
2022-04-04 07:27:39 PDT
***
Bug 238674
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug