REGRESSION(r292197): 3 TestWebKitAPI.ContentRuleList API tests are constant failures/timeout https://bugs.webkit.org/show_bug.cgi?id=238678 <rdar://91173297>

Unreviewed, in r292197, I made a last minute mistake when applying some of Darin's review comments.
I converted a few calls to `NSURL.absoluteURL.fileSystemRepresentation` to
`NSURL.absoluteString` instead of `NSURL.absoluteURL.path`. As a result, the file://
prefix was still present and some characters may still be URL-encoded.

No new tests, covered by existing API tests failing on the bots.


* UIProcess/API/Cocoa/WKContentRuleListStore.mm:
(+[WKContentRuleListStore storeWithURL:]):
(+[WKContentRuleListStore storeWithURLAndLegacyFilename:]):



Canonical link: https://commits.webkit.org/249132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292230 268f45cc-cd09-0410-ab3c-d52691b4dbfc