Source/WebKit/UIProcess/API/Cocoa/WKContentRuleListStore.mm
@@ -79,7 +79,7 @@ static WKErrorCode toWKErrorCode(const std::error_code& error)
 + (instancetype)storeWithURL:(NSURL *)url
 {
 #if ENABLE(CONTENT_EXTENSIONS)
-    return wrapper(API::ContentRuleListStore::storeWithPath(url.absoluteString));
+    return wrapper(API::ContentRuleListStore::storeWithPath(url.absoluteURL.path));
 #else
     return nil;
 #endif
@@ -194,7 +194,7 @@ static WKErrorCode toWKErrorCode(const std::error_code& error)
 + (instancetype)storeWithURLAndLegacyFilename:(NSURL *)url
 {
 #if ENABLE(CONTENT_EXTENSIONS)
-    return wrapper(API::ContentRuleListStore::storeWithPath(url.absoluteString));
+    return wrapper(API::ContentRuleListStore::storeWithPath(url.absoluteURL.path));
 #else
     return nil;
 #endif
